feat: Update Order.java and StockMovementMapper.java. And add a new feature